Fixed spacing and font sizes with header

--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -8371,3 +8371,7 @@
   .invisible {
     visibility: hidden !important;
   }
+
+  body {
+    padding-top: 70px;
+  }
