--- a/public/stylesheets/wikipedia.css
+++ b/public/stylesheets/wikipedia.css
@@ -1,5 +1,4 @@
 body {
-    margin-top: 15%;
     background-color: teal;
 }
   
